<resources>
    <string name="app_name">Emixer App</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_1">Ray</string>
    <string name="user_2">Edu</string>
    <string name="name">Name</string>

    <!--  Headers  -->
    <string name="select_profile_header_text">Select your profile</string>
    <string name="give_a_name_and_icon_to_your_profile">Give a name and icon to your profile</string>
    <string name="manage_profile_header_text">Select the profile you want to edit</string>
    <string name="edit_profile_header_text">Give a name and icon to your profile</string>

    <!--  Teste de Serviço AIDL  -->

    <string name="title_page_AIDL">Teste de Serviço AIDL</string>
    <string name="comunicacao_aidl">Comunicação AIDL</string>
    <string name="decricao_aidl">Teste a comunicação com o serviço AIDL em segundo plano alterando o valor e observando as mudanças.</string>
    <string name="valor_servico">Valor do Serviço: N/A</string>
    <string name="update_value_service">Atualizar Valor</string>

    <string name="monitorar_servico_card_title">Monitoramento do Serviço</string>
    <string name="monitorar_servico_card_description">Visualize as informações de uso de recursos do serviço AIDL em tempo real.</string>
    <string name="monitorar_servico_card_value">Uso de Memória: N/A</string>



    <!--  Android Manifest  -->
    <string name="message_service_description">Allow access to the Message Service.</string>

    <!--  Welcome Screen  -->

    <string name="select_or_manage_profiles">Select your profiles</string>
    <string name="no_profiles_message">No profiles found. Add a new profile or import from contacts in Settings.</string>
    <string name="add_profile_button_text_">Add Profile</string>
    <string name="import_contacts_button_text">Import Contacts</string>

    <!--  Add User Screen  -->
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="volume">Volume</string>
    <string name="track">Track</string>


    <!--  Buttons  -->
    <string name="manage_users_button_text">Manage Profiles</string>
    <string name="add_profile_button_text">+</string>
    <string name="reset_button_text">Reset</string>
    <string name="profile_button_text">Profile</string>
    <string name="delete_button_text">Delete</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="select_the_profile_you_want_to_edit">Select the profile you want to edit</string>
    <string name="profiles">Profiles</string>
    <string name="welcome">Welcome</string>
    <string name="joao">Joao</string>
    <string name="click_here_to_select_another_profile">Click here to select another profile</string>
    <string name="bass">Bass</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
    <string name="main">Main</string>
    <string name="pan">Pan</string>
    <string name="l">L</string>
    <string name="r">R</string>
    <string name="reset">Reset</string>
    <string name="logo_of_the_app">Logo of the APP</string>
    <string name="save_settings">Save Settings</string>
    <string name="send_message">Send Message (AIDL Testing) </string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="no_profiles_message_manage">There are no profiles, add a new one.</string>
    <string name="esta_se_o_permite_testar_a_comunica_o_com_o_servi_o_aidl_em_segundo_plano_coloque_no_logcat_setvalue">Esta seção permite testar a comunicação com o serviço AIDL em segundo plano. Coloque no LogCat setValue()</string>
    <string name="teste_de_servi_o_aidl">Teste de Serviço AIDL</string>
    <string name="atualizar_valor">Atualizar Valor</string>
    <string name="valor_do_servi_o_n_a">Valor do Serviço: N/A</string>
    <string name="stop">Stop</string>
    <string name="next_track">Next Track</string>
    <string name="current_track">Current Track:</string>
</resources>