<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_grey"
    tools:context="com.example.emixerapp.ui.screens.UserPage">

    <ScrollView
        android:id="@+id/scrollViewUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/rlt_media_buttons"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/ImgUserPageLogo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="10dp"
                android:contentDescription="@string/logo_of_the_app"
                android:src="@drawable/logo" />

            <RelativeLayout
                android:id="@+id/welcomeUserContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ImgUserPageLogo">

                <TextView
                    android:id="@+id/welcomeMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/latolight"
                    android:gravity="center"
                    android:paddingStart="16dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="5dp"
                    android:paddingBottom="5dp"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="40sp" />

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_toEndOf="@+id/welcomeMessage"
                    android:fontFamily="@font/latolight"
                    android:gravity="center"
                    android:paddingStart="0dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="5dp"
                    android:text="@string/joao"
                    android:textColor="@color/black"
                    android:textSize="40sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtUserPageMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/welcomeMessage"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:fontFamily="@font/latolight"
                    android:gravity="center"
                    android:paddingLeft="16dp"
                    android:paddingRight="16dp"
                    android:text="@string/click_here_to_select_another_profile"
                    android:textColor="@color/grey"
                    android:textSize="24sp"
                    android:textStyle="bold" />

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/soundContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/welcomeUserContainer"
                android:layout_marginTop="24dp"
                android:baselineAligned="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:weightSum="4">

                <!-- Primeira coluna com SeekBar de Bass -->
                <LinearLayout
                    android:id="@+id/relativebass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/basstxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/latolight"
                        android:text="@string/bass"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/bassSeekBar"
                        style="@style/CustomSeekBar"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:rotation="270" />
                </LinearLayout>

                <!-- Segunda coluna com SeekBar de Mid -->
                <LinearLayout
                    android:id="@+id/relativemid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/midtxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/latolight"
                        android:text="@string/mid"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/midSeekBar"
                        style="@style/CustomSeekBar"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:rotation="270" />
                </LinearLayout>

                <!-- Terceira coluna com SeekBar de High -->
                <LinearLayout
                    android:id="@+id/relativehigh"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/hightxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/latolight"
                        android:text="@string/high"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/highSeekBar"
                        style="@style/CustomSeekBar"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:rotation="270" />
                </LinearLayout>

                <!-- Quarta coluna com SeekBar de Main Volume -->
                <LinearLayout
                    android:id="@+id/relativeseek"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/seektxt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/latolight"
                        android:text="@string/main"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/mainVolumeSeekBar"
                        style="@style/CustomSeekBar"
                        android:layout_width="300dp"
                        android:layout_height="300dp"
                        android:layout_marginTop="5dp"
                        android:max="100"
                        android:rotation="270" />
                </LinearLayout>

            </LinearLayout>

            <RelativeLayout
                android:id="@+id/relativePan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/soundContainer">

                <TextView
                    android:id="@+id/txtpan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/latolight"
                    android:text="@string/pan"
                    android:textAlignment="center"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/txtpan"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="20dp"
                    android:background="@drawable/seekbar_background_component"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/txtleft"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerHorizontal="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="0dp"
                        android:fontFamily="@font/latolight"
                        android:text="@string/l"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/panSeekBar"
                        style="@style/CustomSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="5dp"
                        android:layout_toStartOf="@+id/txtright"
                        android:layout_toEndOf="@+id/txtleft"
                        android:max="100"
                        android:orientation="horizontal"
                        android:progress="50" />

                    <TextView
                        android:id="@+id/txtright"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="0dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="10dp"
                        android:fontFamily="@font/latolight"
                        android:text="@string/r"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </RelativeLayout>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativePan"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="16dp"
                android:paddingBottom="100dp"
                android:layout_marginTop="30dp"
                >

                <Button
                    android:id="@+id/resetAudioSettingsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="80dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/transparent_background"
                    android:fontFamily="@font/latolight"
                    android:text="@string/reset"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    tools:ignore="RelativeOverlap"
                    />

                <ImageButton
                    android:id="@+id/saveAudioSettingsButton"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:background="@drawable/circleborderbutton"
                    android:backgroundTint="@color/grey"
                    android:contentDescription="@string/save_settings"
                    android:fontFamily="@font/latolight"
                    android:padding="20dp"
                    android:scaleType="fitCenter"
                    android:src="@drawable/checkw"
                    />
            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>


    <RelativeLayout
        android:id="@+id/rlt_media_buttons"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentBottom="true"
        android:background="@color/black">

        <Button
            android:id="@+id/btnPause"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="0dp"
            android:background="@drawable/seekbar_background"
            android:fontFamily="@font/latolight"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btnPlay"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/seekbar_background"
            android:fontFamily="@font/latolight"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

        <Button
            android:id="@+id/btnStop"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/seekbar_background"
            android:fontFamily="@font/latolight"
            android:textColor="@color/black"
            android:textSize="30sp"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

</RelativeLayout>
